-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.15.0
-
None
-
-
a7756a72fd3c5ec86d2c42402636b26466333e23 (qt-creator/qt-creator/5.0)
Using the Refactor => "Insert virtual functions of base class" does not insert virtual functions for base classes which are itself base classes (and do not re-declare the virtual function).

E.g in this example I filtered to find the headerData() method and it pops up in three derived classes (red arrows). As you can see, I've chosen the direct base class method of my class.
After pressing "Ok" nothing was inserted.
If I choose the top most listing of headerData() ( the on in QAbstractItemModel) in get the method inserted in my code.
I attached the test code.
- is duplicated by
-
QTCREATORBUG-26067 "Insert Virtual Function" Refactor Option inserts unwanted functions
-
- Closed
-
- relates to
-
QTCREATORBUG-25992 paintEngine always preselected
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-25749 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 360839,4 | CppTools: Fix look-up of top-level virtual function declaration | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |