CppTools: Fix look-up of top-level virtual function declaration

Fixes: QTCREATORBUG-25749
Change-Id: I7a9e8e406739931df253f14772361f575adbaa3f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>